# smpl-payments

./: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
SmplPaymentsBrunoCollection/: Create Transaction.bru  Deposit Wallet.bru  Get Profile.bru  Get Transactions.bru  Get Wallet.bru  List Transactions.bru  Sign In.bru  Sign Up.bru  Update Profile.bru  Withdraw Wallet.bru  bruno.json
migrations/2024-12-22-073337_users/: up.sql
migrations/2024-12-22-141032_wallet/: down.sql  up.sql
migrations/2024-12-22-184846_transaction/: down.sql  up.sql
src/: main.rs  utils.rs
src/db/: error.rs  mod.rs  models.rs  schema.rs  transaction.rs  users.rs  wallet.rs
src/handler/: mod.rs  profile.rs  sign_in.rs  sign_up.rs  transaction.rs  wallet.rs
