[package]
name = "smpl-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "numeric", "postgres"] }
diesel-async = { version = "0.5.2", features = ["tokio", "deadpool", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
hmac = "0.12.1"
jwt = "0.16.0"
pwhash = "1.0.0"
serde = { version = "1.0.216", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tower_governor = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
